feat(templates): 添加设计、产品、需求、结构、技术和任务模板 feat(build): 更新构建配置以支持 JDK 17 和单元测试覆盖率 fix(log): 修复 Bilibili 播放器的完成状态判断逻辑 test(log): 为 BilibiliCompletionTrust 添加单元测试