@@ -37,6 +37,7 @@ fun Project.moduleSetup() {
 
             getByName("debug") {
                 initWith(buildTypes.getByName("debug"))
+                enableUnitTestCoverage = true
             }
 
             create("beta") {
@@ -63,6 +64,13 @@ fun Project.moduleSetup() {
             unitTests.isReturnDefaultValues = true
             unitTests.all {
                 it.systemProperty("robolectric.enabledSdks", Versions.targetSdkVersion.toString())
+                // JDK 17 requires --add-opens for Robolectric and JaCoCo instrumentation
+                it.jvmArgs(
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens=java.base/java.io=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+                )
             }
         }
 
